# Optimization

./: LICENSE
C++/: CMakeLists.txt
C++/examples/: main.cpp
C++/examples/lcqp-ipopt/: LCQP_1.hpp  QCQP_1.hpp  main.cpp
C++/examples/qp-ipopt/: LCQP_1.hpp  QCQP_1.hpp  example_1.hpp  main_example_1.cpp  main_lcqp_1.cpp  main_qcqp_1.cpp
C++/include/: CMakeLists.txt
C++/include/NLP/: NLP.hpp  QP.hpp
C++/include/Solver/: IPOPT.hpp  Solver.hpp
C++/lib/: CMakeLists.txt
C++/lib/NLP/: NLP.hpp  QP.hpp
C++/lib/Solver/: IPOPT.hpp  Solver.hpp
python/: ipopt.py  main.py
